Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7019

Can't debug DLL with GDB

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • None
    • None
    • VMware Workstation 9.0.1 build-894247
      r58550

    Description

      I need to debug some dll inside ReactOS
      But when I load exe, no debugging info is loaded for libraries
      Here is results of "info share" command in Windows 7 and ReactOS

      Attachments

        1. gdb_reactos_dlls_load_fail.png
          gdb_reactos_dlls_load_fail.png
          30 kB
        2. gdb_win7.png
          gdb_win7.png
          41 kB
        3. gdb-loaddll_v2.patch
          6 kB
        4. gdb-loaddll.diff
          3 kB
        5. gdb-loaddll.diff
          3 kB
        6. main.cpp
          0.2 kB

        Issue Links

          Activity

            People

              hbelusca hbelusca
              Vort Vort
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: