[NTOS] - Do not forget to initialize LoadDll->NamePointer in DbgkMapViewOfSection!! - Just copy the NamePointer (pointer to pointer to file name) in DbgUiConvertStateChangeStructure. See the description of the lpImageName member of the LOAD_DLL_DEBUG_INFO structure in https://msdn.microsoft.com/en-us/library/windows/desktop/ms680351(v=vs.85).aspx for more details.

This fixes some debugging stuff with GDB (see the below-mentioned report).

Adapted from a patch by andy-123 (whom I don't remember his name^^),
CORE-7019 #resolve #comment Fixed in r68306
CORE-8622 #comment An updated fix was committed in r68306

svn path=/trunk/; revision=68306